--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ p{
 	margin:0 auto 35px;
 }
 .header h1{
-	font-family: 'Montserrat',sans-serif;
+	font-family: 'Moon 2.0';
 	font-size:50px;
 	font-weight:600;
 	letter-spacing: -1px;
