--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
 @charset "utf-8";
-/*
- Knight Bootstrap theme by BootstrapTaste.com
- Theme URI: http://bootstraptaste.com/knight-free-bootstrap-theme/
- Author: BootstrapTaste
- Author URI: http://bootstraptaste.com
- */
  
 /* CSS Document */
 
@@ -106,7 +100,7 @@ p{
 	margin:0 auto 35px;
 }
 .header h1{
-	font-family: 'Moon 2.0';
+	font-family: 'Montserrat',sans-serif;
 	font-size:50px;
 	font-weight:600;
 	letter-spacing: -1px;
