--- a/css/style.css
+++ b/css/style.css
@@ -157,9 +157,11 @@ color: #fff;
 ---------------------------------*/
 .main-nav-outer{
 	padding:0px;
-	box-shadow: 0px 2px 10px px #4e4e4e;
+	box-shadow: 0px 2px 10px 0px #4e4e4e;
 	position:relative;
 	background:#0caa7d;
+	border-bottom-left-radius: 30px;
+	border-bottom-right-radius: 30px;
 }
 .main-nav{
 	text-align:center;
