--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ color: #fff;
 	box-shadow: 0px 2px 10px 0px #474747;
 	position:relative;
 	background:#0caa7d;
+	border-radius: 0px;
 }
 .main-nav{
 	text-align:center;
